--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-  "name": "yazmin-wood-api",
+  "name": "vidly",
   "version": "1.0.0",
-  "description": "this is the backened for Yazmin wood",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "seed": "node seed.js",
+    "test": "jest --watchAll --verbose"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "config": "^3.3.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "joi": "^14.3.1",
-    "joi-browser": "^13.4.0",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.5",
-    "winston": "^3.2.1"
+    "bcrypt": "^4.0.1",
+    "config": "^1.29.4",
+    "cors": "^2.8.4",
+    "express": "^4.16.2",
+    "express-async-errors": "^2.1.0",
+    "fawn": "^2.1.5",
+    "joi": "^13.4.0",
+    "joi-objectid": "^2.0.0",
+    "jsonwebtoken": "^8.1.1",
+    "lodash": "^4.17.10",
+    "moment": "^2.20.1",
+    "mongoose": "^5.0.2",
+    "winston": "^2.4.0",
+    "winston-mongodb": "^3.0.0"
+  },
+  "devDependencies": {
+    "jest": "^22.2.2",
+    "supertest": "^3.0.0"
   }
 }
