--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "RobertMill",
   "license": "ISC",
   "engines": {
-    "node": ">=13.7.0"
+    "node": "13.7.0"
   },
   "dependencies": {
     "bcrypt": "^4.0.1",
