--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.10",
     "moment": "^2.20.1",
     "mongoose": "^5.0.2",
+    "react-scripts": "^3.4.1",
     "winston": "^2.4.0",
     "winston-mongodb": "^3.0.0"
   },
