--- a/package.json
+++ b/package.json
@@ -1,39 +1,45 @@
 {
   "name": "yazmin-wood",
   "version": "1.0.0",
-  "description": "",
+  "description": "This project is the backend of Vidly, an imaginary video rental app. I've used Vidly as an example in several of my online programming courses, such as:",
   "main": "index.js",
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "keywords": [],
-  "author": "RobertMill",
-  "license": "ISC",
-  "engines": {
-    "node": "13.7.0"
+  "directories": {
+    "test": "tests"
   },
   "dependencies": {
     "bcrypt": "^4.0.1",
-    "config": "^1.29.4",
-    "cors": "^2.8.4",
-    "express": "^4.16.2",
-    "express-async-errors": "^2.1.0",
+    "cloudinary": "^1.21.0",
+    "cloudinary-core": "^2.8.2",
+    "config": "^1.31.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
-    "joi": "^13.4.0",
+    "http-status-codes": "^1.4.0",
+    "imagekit": "^3.0.4",
+    "joi": "^14.3.1",
+    "joi-browser": "^13.4.0",
     "joi-objectid": "^2.0.0",
-    "jsonwebtoken": "^8.1.1",
-    "lodash": "^4.17.10",
-    "moment": "^2.20.1",
-    "mongoose": "^5.0.2",
-    "react-scripts": "^3.4.1",
-    "winston": "^2.4.0",
-    "winston-mongodb": "^3.0.0"
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "mongoose": "^5.9.5",
+    "nodemailer": "^6.4.6",
+    "winston": "^2.4.4",
+    "winston-mongodb": "^3.0.2"
   },
   "devDependencies": {
-    "jest": "^22.2.2",
-    "supertest": "^3.0.0"
-  }
+    "jest": "^22.4.4",
+    "supertest": "^3.4.2"
+  },
+  "scripts": {
+    "start": "node index.js",
+    "test": "jest --watchAll --verbose"
+  },
+  "engines": {
+    "node": "13.7.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
