--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "yazmin-wood",
+  "name": "dudeh-api",
   "version": "1.0.0",
-  "description": "This project is the backend of Vidly, an imaginary video rental app. I've used Vidly as an example in several of my online programming courses, such as:",
+  "description": "This project is the backend of dennis udeh website",
   "main": "index.js",
   "directories": {
     "test": "tests"
